monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0278/A0278.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0278;

grammar A0278 {

  interface A;

  B = A;

}
